(09/07/17)
==========

· Updated Server > Web Server+PHP7

==========

· Added Emus > Advance MAME 3.4

· Added Emus > MAME 0.183

(02/10/16)
==========

· Added Emus > OpenMSX 0.13.0

(13/09/16)
==========

· Added Games > Giana's return, ScummVM. Updated Spectrum emulator unrealspeccy to 0.0.69.1

(12/09/16)
==========

·  Fix issues and improve config, inet, other, server, tweaks sections. Raspberry Pi 3 ready.

(08/09/16)
==========

· Fix issues and improve games, emulators, info, mmedia sections. Raspberry Pi 3 ready.
· Added Xump game.
· Remove Minecraft script.

(07/09/16)
==========

· Fix issues and improve games/emulator section. Raspberry Pi 3 ready.

(06/09/16)
==========

· Fix issues and improve games section. Raspberry Pi 3 ready.

(05/09/16)
==========

· Fix issues and improve tweaks section. Raspberry Pi 3 ready.

(17/08/16)
==========

· Fix issue with link to the new lib-gfx.1.5 library.

(04/05/16)
==========

· Added Let's Encrypt on web server

(18/04/16)
==========

· Added desktop icons to MAME, Speccy

(29/03/16)
==========

· Added server > VNCServer

(25/02/16)
==========

· Added games > Game Maker games

(26/05/15)
==========

· Added server > Nagios

· Added Info > Webmin

(23/05/15)
==========

· Added games > OpenBor for Raspberry Pi, Debian Jessie

(19/05/15)
==========

· Added game Arx Fatalis for Raspberry Pi 2, ODROID and Debian Jessie

(09/05/15)
==========

· Added server > Ad Blocker

(21/04/15)
==========

· Added others > ramlog

· Uddated tweaks > others.sh (Install package fuck)

(18/04/15)
==========

· Added Emus > Picodrive & Caprice for Raspberry Pi 2 (Amstrad emulator)

(17/04/15)
==========

· Updated SDL2, Spectrum emulator

(05/04/15)
==========

· Added Others > NetTools - MITM Pentesting Opensource Toolkit

(21/03/15)
==========

· Updated Emulators > Mame

(19/03/15)
==========

· Updated Games > Return to Castle Wolfenstein

(17/03/15)
==========

· Added Games > Descent 1 & 2 (Shareware)
